bodhi-aws-main/deployment/distribution-template/kubeflow/pipelines-new/cachingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingWebhookConfiguration","metadata":{"annotations":{},"name":"cache-webhook-kubeflow"},"webhooks":[{"admissionReviewVersions":["v1beta1"],"clientConfig":{"caBundle":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVnakNDQW1xZ0F3SUJBZ0lRQUpJMXJSY28xRklteUQ0aUFlVTFJREFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TWpFeE1EUXdOVFV4TWpsYUZ3MHlNekV4TURRd05UVXhNamxhTUVneApGVEFUQmdOVkJBb1RESE41YzNSbGJUcHViMlJsY3pFdk1DMEdBMVVFQXd [...]
  creationTimestamp: "2022-11-04T05:56:31Z"
  generation: 2
  name: cache-webhook-kubeflow
  resourceVersion: "17775"
  uid: 7e52188a-48d3-4ee6-b786-7b2b99048116
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVnakNDQW1xZ0F3SUJBZ0lRQUpJMXJSY28xRklteUQ0aUFlVTFJREFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TWpFeE1EUXdOVFV4TWpsYUZ3MHlNekV4TURRd05UVXhNamxhTUVneApGVEFUQmdOVkJBb1RESE41YzNSbGJUcHViMlJsY3pFdk1DMEdBMVVFQXd3bWMzbHpkR1Z0T201dlpHVTZZMkZqCmFHVXRjMlZ5ZG1WeUxtdDFZbVZtYkc5M0xuTjJZenN3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUNzZk9PN2x5dm9JTUNqQ1Y1QzRReFRocUh2bHpzMjZBN3RqbE9qdUIySFN1UURzWXVOaEVqRgpSRDc1WEp3TzFBek [...]
    service:
      name: cache-server
      namespace: kubeflow
      path: /mutate
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: cache-server.kubeflow.svc
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector:
    matchLabels:
      pipelines.kubeflow.org/cache_enabled: "true"
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - DELETE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 5
